Fix overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
+  overflow-x: hidden;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 .header {
@@ -414,6 +419,10 @@ body {
   .contact-us--details,
   .contact-us--form-container {
     width: 50%;
+  }
+
+  .footer {
+    position: static;
   }
 
   .footer--icon-box {
